-fix navbar - spacing

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html {
   }
 
   .technology-bg {
-    @apply bg-slate-500 rounded-full whitespace-nowrap p-1.5 m-0.5 ml-0.5 mr-1 mb-0.5 text-sm md:text-base;
+    @apply bg-slate-500 rounded-b-lg rounded-tl-lg whitespace-nowrap pr-0.5 pl-0.5 m-1 text-sm md:text-base;
   }
   .input {
     @apply text-gray-900 py-3 px-4 block w-full outline-none rounded-lg text-sm focus:ring-1 focus:ring-secondary disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600;
